<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">showmoney</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">cardinfolink 2015</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="register_register">注册</string>
    <string name="register_next">提交</string>
    <string name="register_hint_qr_password">请确认密码</string>
    <string name="register_hint_email">请输入您的邮箱</string>
    <string name="register_next_finished">完成</string>
    <string name="register_next_hint_openbank">请输入您的开户行,精准到支行</string>
    <string name="register_next_hint_name">请输入您的姓名</string>
    <string name="register_next_hint_banknum">请输入您的银行卡号</string>
    <string name="register_next_hint_phonenum">请输入您的手机号</string>
    <string name="register_next_directions">        *请完善以下信息，才能正常使用收款功能。我们会将您的收款金额在2个工作日内清算到您的账户中。\n
        *云收银将严格遵守国家相关法律法规，承诺不将您的账户信息以任何形式透露给第三方。</string>
    <string name="detail_refd">交易退款</string>
    <string name="update_password">修改密码</string>
    <string name="update_password_hint_oldpwd">当前密码</string>
    <string name="update_password_hint_newpwd">新密码</string>
    <string name="update_password_hint_qr_newpwd">确认新密码</string>
    <string name="update_account">账号修改</string>
    <string name="qr_update">确认修改</string>
    <string name="limit_increase">限额提升</string>
    <string name="limit_increase_directions">       *为确保账户安全，请确认以下信息才能正常提升您的收款额度。我们会有工作人员在3个工作日内电话与您联系，感谢配合。\n
        *云收银将严格遵守国家相关法律法规，承诺不将您的账户信息以任何形式透露给第三方。</string>
    <string name="qr_commit">确认提交</string>
     <string name="dialog_trade_success">交易成功\n感谢购买！</string>
    <string name="dialog_trade_nopay">交易未支付,请支付后查询！</string>
    <string name="dialog_trade_fail">本次交易出错\n支付失败！</string>
    <string name="server_timeout">服务器超时，请检查网络！</string>
    <string name="username_password_error">用户名或密码错误！</string>
    <string name="press_again_exit">再按一次退出程序！</string>
    <string name="username_exist">用户名已存在！</string>
    
    <string name="activate_sentto_email">激活链接将发送到该邮箱:\n\n330961193@qq.com</string>
    <string name="appserverurl">http://qrcode.cardinfolink.net/app/version/version.xml</string> 
</resources>