<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

       
        
        <TextView 
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/update_account"
            android:textColor="#ffffff"
            android:textSize="20sp" 
            android:textStyle="bold"                
              />
        
  <TextView 
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:text="@string/register_next_directions"
            android:textColor="#ffffff"
            android:textSize="15sp"                 
              />
         <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <TableRow              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bluemain_bg"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/account" />

                <EditText
                    android:id="@+id/info_openbank"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:paddingLeft="15dp"
                    android:textColor="#FFFFFF" 
                    android:textColorHint="#eeeeee"
                    android:hint="@string/register_next_hint_openbank"
                    android:singleLine="true"
                    />
            </TableRow>

            <TableRow              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bluemain_bg"
                android:gravity="center_vertical" >

                <ImageView            
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/name" />

                <EditText
                    android:id="@+id/info_name"               
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@null"                   
                    android:paddingLeft="15dp"
                    android:textColor="#FFFFFF" 
                    android:textColorHint="#eeeeee"
                    android:hint="@string/register_next_hint_name"
                    android:singleLine="true"
                    />
            </TableRow>
            
              <TableRow              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bluemain_bg"
                android:gravity="center_vertical" >

                <ImageView
          
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/card" />

                <EditText
                    android:id="@+id/info_banknum"  
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@null"                  
                    android:paddingLeft="15dp"
                    android:textColor="#FFFFFF" 
                    android:textColorHint="#eeeeee"
                    android:inputType="number"
                    android:maxLength="23"
                    android:hint="@string/register_next_hint_banknum"
                    android:singleLine="true"
                    />
            </TableRow>
            
               <TableRow              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bluemain_bg"
                android:gravity="center_vertical" >

                <ImageView
          
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/phone" />

                <EditText
                    android:id="@+id/info_phonenum"  
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:paddingLeft="15dp"
                    android:textColor="#FFFFFF" 
                    android:textColorHint="#eeeeee"
                    android:inputType="number"
                    android:hint="@string/register_next_hint_phonenum"
                    android:singleLine="true"
                    />
            </TableRow>
        </TableLayout>
        
     
       
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center" >

        <Button  
            android:id="@+id/btn_submit"      
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/register_next_finished"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:background="@drawable/blue_selector" 
          
            />

       
    </LinearLayout>       
       
    </LinearLayout>
  

   
    
</LinearLayout>
