<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1EBED6" >

    <com.cardinfolink.yunshouyin.view.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="80dp"
                android:minHeight="40dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:text="@string/register_next_directions"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" 
                android:layout_marginTop="10dp"             
                >

              <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:orientation="horizontal" >

                      <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/account" />

                    <Spinner
                        android:id="@+id/spinner_province"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="26dp" 
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/spinner"                      
                       />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:orientation="horizontal" >

                      <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/account" />

                    <Spinner
                        android:id="@+id/spinner_city"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="26dp" 
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/spinner"                      
                       />
                </LinearLayout>
                
                
                
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:orientation="horizontal" >

                      <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/account" />

                    <Spinner
                        android:id="@+id/spinner_openbank"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="26dp" 
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/spinner"                      
                       />
                </LinearLayout>
                
                 
                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:orientation="horizontal" >

                      <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/account" />

                    <Spinner
                        android:id="@+id/spinner_branchbank"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="26dp" 
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/spinner"                      
                       />
                </LinearLayout>
                
                
                <!--   
                  <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="3"
                        android:text="开户行所在城市"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner_city"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2" />
                </LinearLayout>
                
                  
                   <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="3"
                        android:text="开户银行"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner_bank"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2" />
                </LinearLayout>
                
                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="3"
                        android:text="开户支行"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner_branch_bank"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2" />
                </LinearLayout>
                 -->
                     <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"             
                >
                 
                         

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:gravity="center_vertical" 
                     android:visibility="gone"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/account" />

                    <EditText
                        android:id="@+id/info_openbank"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:hint="@string/register_next_hint_openbank"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#eeeeee" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/name" />

                    <EditText
                        android:id="@+id/info_name"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:hint="@string/register_next_hint_name"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textColorHint="#eeeeee" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/card" />

                    <EditText
                        android:id="@+id/info_banknum"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:hint="@string/register_next_hint_banknum"
                        android:inputType="number"
                        android:maxLength="23"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textColorHint="#eeeeee" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bluemain_bg"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/phone" />

                    <EditText
                        android:id="@+id/info_phonenum"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:hint="@string/register_next_hint_phonenum"
                        android:inputType="number"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textColorHint="#eeeeee" />
                </TableRow>
            </TableLayout>
            
                       <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center" >

                <Button
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/blue_selector"
                    android:onClick="BtnRegisterFinishedOnClick"
                    android:text="@string/register_next_finished"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
            </LinearLayout>

           

          
        </LinearLayout>
    </com.cardinfolink.yunshouyin.view.ReboundScrollView>

    <include layout="@layout/showmoney_dialog" >
    </include>

</RelativeLayout>